MongoD Storage watchdog should treat unexpected interruption as process-fatal

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1, 4.2.2
    • Affects Version/s: None
    • Component/s: Internal Code
    • None
    • Fully Compatible
    • ALL
    • v4.2
    • Dev Tools 2019-08-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The storage engine watchdog treats interruption of one of its periodic threads as fatal to that thread, but not to the process. However, it does not start a replacement thread, meaning that such an interruption (which a sufficiently powerful user can cause with a `killOp` operation) would stop monitoring, leaving behind just an error-level log message. We should change that message to severe-level (F) and terminate the process when we encounter it.

            Assignee:
            Mathew Robinson (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: