SERVER-40667 MongoD Storage watchdog should treat unexpected interruption as process-fatal